// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-keyvault-expiration-audit - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Audit Azure Key Vault resources for expired or expiring keys, secrets, and certificates.
USE FOR: expired certificates, expiring secrets, Key Vault audit, compliance report,
certificate expiration check, secrets without expiration, key rotation report,
"what's expiring in my Key Vault", security audit Key Vault, find expired keys.
DO NOT USE FOR: creating secrets (use azure-security), rotating credentials manually,
Key Vault access policies (use azure-security), or general Azure security guidance.
",
  "extractedKeywords": [
    "access",
    "audit",
    "authentication",
    "azure",
    "azure-security",
    "certificate",
    "certificates",
    "check",
    "cli",
    "compliance",
    "creating",
    "credentials",
    "deploy",
    "expiration",
    "expired",
    "expiring",
    "find",
    "function",
    "general",
    "guidance",
    "key vault",
    "keys",
    "keyvault",
    "manually",
    "mcp",
    "monitor",
    "policies",
    "rbac",
    "report",
    "resources",
    "rotating",
    "rotation",
    "secrets",
    "security",
    "vault",
    "what",
    "without",
  ],
  "name": "azure-keyvault-expiration-audit",
}
`;

exports[`azure-keyvault-expiration-audit - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "access",
  "audit",
  "authentication",
  "azure",
  "azure-security",
  "certificate",
  "certificates",
  "check",
  "cli",
  "compliance",
  "creating",
  "credentials",
  "deploy",
  "expiration",
  "expired",
  "expiring",
  "find",
  "function",
  "general",
  "guidance",
  "key vault",
  "keys",
  "keyvault",
  "manually",
  "mcp",
  "monitor",
  "policies",
  "rbac",
  "report",
  "resources",
  "rotating",
  "rotation",
  "secrets",
  "security",
  "vault",
  "what",
  "without",
]
`;
